--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
   "scripts": {
     "start": "react-scripts start",
     "cleanBuild": "rimraf ./build/*",
-    "build": "npm run cleanBuild && set \"GENERATE_SOURCEMAP=false\" && react-scripts build ",
+    "build": "rimraf ./build/* && set \"GENERATE_SOURCEMAP=false\" && react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
